--- a/ip 1a/resume.html
+++ b/ip 1a/resume.html
@@ -26,9 +26,9 @@
 </head>
 <body>
      <h2>RESUME</h2>
-     <p>Name:Arvindh.V</p>
+     <p>Name:Abisheak.C</p>
     
-    <p>Email: <a href="220701030@rajalakshmi.edu.in">220701030@rajalakshmi.edu.in</a></p>
+    <p>Email: <a href="220701030@rajalakshmi.edu.in">220701009@rajalakshmi.edu.in</a></p>
     <p>Phone:+918838040904</p>
     <p>LinkedIn: <a href="www.linkedin.com/in/arvindh-v-5aa671258" target="_blank">www.linkedin.com/in/arvindh-v-5aa671258</a></p>
 
